# fastapi_learning

./: pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 94af46cd1c56_init.py  dc38b1661492_password_hash.py
src/: config.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/books/: __init__.py  book_data.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  service.py
